Bug 248556 - WebDriver: Get Element Rect should not round to integer values
Summary: WebDriver: Get Element Rect should not round to integer values
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebDriver (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Patrick Angle
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-30 13:57 PST by Patrick Angle
Modified: 2022-12-07 12:04 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Angle 2022-11-30 13:57:37 PST
The following tests fail as a result of this issue:

webdriver/tests/get_element_rect/get.py::test_basic
webdriver/tests/get_element_rect/user_prompts.py::test_accept[capabilities0-alert-None]
webdriver/tests/get_element_rect/user_prompts.py::test_accept[capabilities0-confirm-True]
webdriver/tests/get_element_rect/user_prompts.py::test_accept[capabilities0-prompt-]
webdriver/tests/get_element_rect/user_prompts.py::test_dismiss[capabilities0-alert-None]
webdriver/tests/get_element_rect/user_prompts.py::test_dismiss[capabilities0-confirm-False]
webdriver/tests/get_element_rect/user_prompts.py::test_dismiss[capabilities0-prompt-None]
Comment 1 Patrick Angle 2022-11-30 13:57:43 PST
<rdar://100588620>
Comment 2 Patrick Angle 2022-11-30 14:32:32 PST
Pull request: https://github.com/WebKit/WebKit/pull/6991
Comment 3 EWS 2022-12-07 12:04:16 PST
Committed 257498@main (ac88ff2a875c): <https://commits.webkit.org/257498@main>

Reviewed commits have been landed. Closing PR #6991 and removing active labels.